[gd_scene load_steps=3 format=2]

[ext_resource path="res://script/Bg/SceneChange.gd" type="Script" id=1]
[ext_resource path="res://images/bg/arrow.png" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureButton" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 20.0
margin_right = 60.0
margin_bottom = 40.0
rect_rotation = 90.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_right = 20.0994
margin_bottom = 40.0
rect_rotation = -90.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="Left" to="." method="_on_Left_button_up"]
[connection signal="button_up" from="Right" to="." method="_on_Right_button_up"]
[connection signal="button_up" from="Up" to="." method="_on_Up_button_up"]
[connection signal="button_up" from="Down" to="." method="_on_Down_button_up"]
